After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750573 - GTlsDatabaseClass is not documented
GTlsDatabaseClass is not documented
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-06-08 15:11 UTC by Xavier Claessens
Modified: 2015-06-08 20:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
doc: Add missing GTlsDatabaseClass (2.85 KB, patch)
2015-06-08 15:12 UTC, Xavier Claessens
committed Details | Review

Description Xavier Claessens 2015-06-08 15:11:56 UTC
.
Comment 1 Xavier Claessens 2015-06-08 15:12:13 UTC
Created attachment 304784 [details] [review]
doc: Add missing GTlsDatabaseClass
Comment 2 Xavier Claessens 2015-06-08 20:05:29 UTC
Thanks.