doc: Add missing GTlsDatabaseClass

https://bugzilla.gnome.org/show_bug.cgi?id=750573